<resources>
    <string name="app_name">Purrytify</string>
    <string name="title_home">Home</string>
    <string name="title_library">Your Library</string>
    <string name="title_profile">Profile</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="like">Like</string>
    <string name="album_cover">Album Cover</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="play_pause">Play Pause</string>
    <string name="back_button">Back Button</string>
    <string name="more_options">More Options</string>
    <string name="audio_output">Audio Output</string>

    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_one">Repeat One</string>
    <string name="repeat_all">Repeat All</string>
    <string name="queue">Queue</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="remove_from_queue">Remove from Queue</string>
    <string name="clear_queue">Clear Queue</string>
    <string name="queue_empty">Your queue is empty</string>
    <string name="now_playing">Now Playing</string>
    <string name="next_up">Next Up</string>
    <string name="added_to_queue">Added to queue</string>
    <string name="share_icon">Share Icon</string>
    <string name="qr_code_icon">QR Code Icon</string>
    <string name="scan_qr">Scan QR</string>
</resources>