<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/track_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@android:color/background_dark">

    <ImageView
        android:id="@+id/image_album"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/album_cover"
        android:scaleType="centerCrop"
        tools:src="@drawable/starboy_cover" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_album"
        android:layout_marginTop="24dp"
        android:text="Starboy"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title"
        android:text="The Weeknd, Daft Punk6"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="8dp"/>

    <ImageButton
        android:id="@+id/btn_favorite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@id/text_artist"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/favorite_icon"
        android:src="@drawable/ic_fav_border" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_artist"
        android:layout_marginTop="16dp"
        android:progressTint="@android:color/white"
        android:thumbTint="@android:color/white" />

    <TextView
        android:id="@+id/text_current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/seek_bar"
        android:text="1:44"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/text_total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/text_current_time"
        android:layout_alignParentEnd="true"
        android:text="3:50"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/layout_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_total_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn_prev"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_prev"
            android:contentDescription="@string/previous" />

        <ImageButton
            android:id="@+id/btn_play"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_play"
            android:contentDescription="@string/play" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_next"
            android:contentDescription="@string/next" />
    </LinearLayout>



</RelativeLayout>
